# MultiBind

./: BUILD-IMPROVEMENTS.md  CMakeLists.txt  DECISION_LOG.md  DOCUMENTATION_ISSUES.md  Info.plist  QUICKSTART.md  README.md  STYLE_GUIDE.md  TODO-2.md  TODO.md  USER-EXPERIENCE-IMPROVEMENTS.md  WINDOWS-SETUP.md  build-all.bat  build-all.sh  build.bat  build.sh  debug-event-1.3.0-axis-detection-failure.md  debug_real_issue  generate-vs-project.bat  real_timing_test  setup-sdk.bat  setup-sdk.sh  test_axis_config.txt  test_continuous_real.cpp  test_negate_config.txt  test_negate_fixed.txt  tood-axis.md  verify-plugin.sh
.github/workflows/: build.yml  release.yml
logs/: xplane_logs.txt
src/: combination_tracker.cpp  combination_tracker.h  config.cpp  config.h  constants.h  error_handling.h  event_system.cpp  event_system.h  input_validation.h  multibind.cpp  ui.cpp  ui.h
test_multibind/: test_config.txt
tests/: CMakeLists.txt  build_simple_test.sh  debug_real_issue.cpp  exact_bug_test  exact_bug_test.cpp  fast_input_test.cpp  isolated_test  isolated_test.cpp  minimal_bug_reproduction  minimal_bug_reproduction.cpp  real_timing_test.cpp  run_tests.sh  simple_test.cpp  state_machine_test  state_machine_test.cpp  test_combination_tracker.cpp
